dashboard/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dashboard.${KUBE_DOMAIN_ALPHA}
    - dashboard.${KUBE_DOMAIN_BETA}
    secretName: kubernetes-dashboard-tls
  rules:
  - host: dashboard.${KUBE_DOMAIN_ALPHA}
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
  - host: dashboard.${KUBE_DOMAIN_BETA}
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
